// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link functions correctly with children 1`] = `
<styled.a
  b150={true}
  href="http://wizeline.com/"
  onClick={[Function]}
  priority="b150"
  target="_blank"
>
  hello
</styled.a>
`;

exports[`Link functions correctly without children 1`] = `
<styled.a
  b150={true}
  href="http://wizeline.com/"
  onClick={[Function]}
  priority="b150"
  target=""
/>
`;
